--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="form-buttons">
-            <button type="button" class="add-button main-button" id="submit-form">Add to Library</button>
+            <button type="button" class="add-button main-button" id="submit-form" onclick="addBookToLibrary()">Add to Library</button>
         </div>
         </form>
     </div>
