Updating add book functionality

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
                 <label for="status">Status*</label>
                 <select name="status" id="status">
                     <option value="" disabled selected>Select:</option>
-                    <option value="complete">Complete</option>
-                    <option value="in-progress">In progress</option>
-                    <option value="not-started">Not started</option>
-                    <option value="dropped">Dropped</option>
+                    <option value="Complete">Complete</option>
+                    <option value="In progress">In progress</option>
+                    <option value="Not started">Not started</option>
+                    <option value="Dropped">Dropped</option>
                 </select>
             </div>
         </div>
