--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div class="main">
         <div class="header">
             <div class="header-left">
-                <img src="/logo.svg" alt="Books logo" class="logo">
+                <img src="./logo.svg" alt="Books logo" class="logo">
                 <h1 id="page-title">Library</h1>
             </div>
             <div class="header-right">
