--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             </div> 
             <div class="header-right">
                 <button class="main-button add-button" id="open-form">Add New</button>
-                <button class="main-button clear-button" id="clear-all">Clear All</button>
+                <button class="main-button clear-button" id="clear-all" onclick="clearAll()">Clear All</button>
             </div>
         </div>
         <div class="content" id="card-container">
