Updated UI, began status change function

--- a/index.html
+++ b/index.html
@@ -19,25 +19,23 @@
         </div>
         <div class="form-content">
             <div class="input">
-                <label for="title">Book title*</label>
-                <input type="text" placeholder="The Hobbit" id="title" name="title" maxlength="100" minlength="2" required>
+                <label for="title">Book title</label>
+                <input type="text" placeholder="The Hobbit" id="title" name="title" maxlength="100" minlength="2">
             </div>
             <div class="input">
-                <label for="author">Book author*</label>
-                <input type="text" placeholder="J. R. R. Tolkien" name="author" id="author" maxlength="100" minlength="2" required>
+                <label for="author">Book author</label>
+                <input type="text" placeholder="J. R. R. Tolkien" name="author" id="author" maxlength="100" minlength="2">
             </div>
             <div class="input">
-                <label for="pages">Page count*</label>
-                <input type="number" placeholder="304" name="pages" id="pages" maxlength="5" minlength="1" required>
+                <label for="pages">Page count</label>
+                <input type="number" placeholder="304" name="pages" id="pages" maxlength="5" minlength>
             </div>
             <div class="input">
-                <label for="status">Status*</label>
+                <label for="status">Status</label>
                 <select name="status" id="status">
                     <option value="" disabled selected>Select:</option>
                     <option value="Complete">Complete</option>
-                    <option value="In progress">In progress</option>
-                    <option value="Not started">Not started</option>
-                    <option value="Dropped">Dropped</option>
+                    <option value="Incomplete">Incomplete</option>
                 </select>
             </div>
         </div>
