--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
         <div class="form-content">
             <div class="input">
                 <label for="title">Book title</label>
-                <input type="text" placeholder="The Hobbit" id="title" name="title" maxlength="100" minlength="2">
+                <input type="text" placeholder="The Hobbit" id="title" name="title" maxlength="100" minlength="2" required>
             </div>
             <div class="input">
                 <label for="author">Book author</label>
-                <input type="text" placeholder="J. R. R. Tolkien" name="author" id="author" maxlength="100" minlength="2">
+                <input type="text" placeholder="J. R. R. Tolkien" name="author" id="author" maxlength="100" minlength="2" required>
             </div>
             <div class="input">
                 <label for="pages">Page count</label>
-                <input type="number" placeholder="304" name="pages" id="pages" maxlength="5" minlength>
+                <input type="number" placeholder="304" name="pages" id="pages" maxlength="5" required>
             </div>
             <div class="input">
                 <label for="status">Status</label>
