--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
         </div>
         <div class="form-content">
             <div class="input">
-                <label for="title">Book title</label>
-                <input type="text" placeholder="The Hobbit" id="title" name="title" maxlength="100" minlength="2" required>
+                <label for="title">Book title*</label>
+                <input type="text" placeholder="The Hobbit" id="title" name="title" required>
             </div>
             <div class="input">
-                <label for="author">Book author</label>
-                <input type="text" placeholder="J. R. R. Tolkien" name="author" id="author" maxlength="100" minlength="2" required>
+                <label for="author">Book author*</label>
+                <input type="text" placeholder="J. R. R. Tolkien" name="author" id="author" required>
             </div>
             <div class="input">
-                <label for="pages">Page count</label>
-                <input type="number" placeholder="304" name="pages" id="pages" maxlength="5" required>
+                <label for="pages">Page count*</label>
+                <input type="number" placeholder="304" name="pages" id="pages" required>
             </div>
             <div class="input">
-                <label for="status">Status</label>
+                <label for="status">Status*</label>
                 <select name="status" id="status">
-                    <option value="" disabled selected>Select:</option>
+                    <option value="Select" disabled selected>Select:</option>
                     <option value="Complete">Complete</option>
                     <option value="Incomplete">Incomplete</option>
                 </select>
